CNSDEVCOLECT/force-app/main/default/objects/MessageNotification__c/MessageNotification__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CS para almacenar la estructura de las notificaciones desktop que se enviarán para los milestones.</description>
    <label>MessageNotification</label>
</CustomObject>