CNSDEVCOLECT/force-app/main/default/objects/MessageNotification__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Almacena el cuerpo de la notificación.</description>
    <label>Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>