CNSDEVCOLECT/force-app/main/default/objects/MessageNotification__c/fields/Functionality__c.field-meta.xml
<CustomField>
    <fullName>Functionality__c</fullName>
    <description>Indica el propósito de la notificación.</description>
    <label>Functionality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>