CNSDEVCOLECT/force-app/main/default/objects/MessageNotification__c/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Almacena la cabecera de la notificación.</description>
    <label>Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>