CNSDEVCOLECT/force-app/main/default/objects/MessageNotification__c/fields/object__c.field-meta.xml
<CustomField>
    <fullName>object__c</fullName>
    <description>Indica el objeto asociado para la notificación.</description>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>