CNSDEVCOLECT/force-app/main/default/objects/MessageNotification__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>Lista de parametros para dar formato al body, deben ir separados por ; (punto y coma)</description>
    <label>Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>