CNSDEVCOLECT/force-app/main/default/objects/MessageNotification__c/listViews/Everis_Mensajes.listView-meta.xml
<ListView>
    <fullName>Everis_Mensajes</fullName>
    <columns>NAME</columns>
    <columns>Header__c</columns>
    <columns>Body__c</columns>
    <columns>Functionality__c</columns>
    <columns>object__c</columns>
    <columns>Parameters__c</columns>
    <filterScope>Everything</filterScope>
    <label>Everis Mensajes</label>
</ListView>